Fixed Overflow

--- a/style.css
+++ b/style.css
@@ -19,8 +19,13 @@ html{
     max-width: 100vw;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 nav {
     height: 100px;
+    width: 100vw;
     display: flex;
     overflow: hidden;
     padding: 1.5rem 7.5rem;
@@ -128,13 +133,14 @@ nav ul li a{
 .section-image{
     margin-top: 3rem;
 }
-@media (width<768px) {
+@media (max-width:768px) {
     nav {
         display: flex;
         align-items: center;
         justify-content: center;
         background-color: #0D121F;
-        z-index: 1;
+        padding: 1.5rem;
+        gap: 64px;
     }
     .logo img{
         width: 144px;
@@ -155,6 +161,7 @@ nav ul li a{
         background-color: var(--dark-primary);
         height: 100vh;
         width: 100%;
+        max-width: 100vw;
         transform: translateX(-100%);
         transition: 0.5s;
         background-color: #0D121F;
@@ -199,17 +206,20 @@ nav ul li a{
     }
     .content{
         display: flex;
+        padding: 0px;
     }
 
     .content h1{
         font-size: 36px;
         text-align: left;
-        width: 19.8125rem;
+        width: 100%;
+        max-width: 19.8125rem;
     }
 
     .content p{
         font-size: 14px;
-        width: 317px ;
+        width: 100%;
+        max-width: 317px ;
         text-align: left;
     }
 
